2011-03-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/PolyDriver.cpp: disconnect from Property
	monitoring object after PolyDriver::open, instead of letting
	the connection linger to cause trouble [thanks Martin Peniak]

	* src/libYARP_dev/harness/PolyDriverTest.cpp: regression test
	for Property+PolyDriver bug reported by Martin on the
	robotcub-hackers list [thanks Martin Peniak]

2011-03-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpview/CMakeLists.txt: test use of official cmake GTK2
	scripts, now that they exist.  May allow our homegrown scripts to
	be retired.

2011-02-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: commit patch for Cartesian interface
	support [thanks Juan G Victores]

2011-02-23  Marco Randazzo <marco.randazzo@iit.it>

    * src/modules/laserHokuyo.cpp
	* src/modules/laserHokuyo.h
	Added a new option to convert invalid measurements to out-of-range measurements.
	Previously invalid measurements were interpreted as near obstacles.
	
2011-02-16  Paul Fitzpatrick  <paulfitz@farmMac1.local>

	* src/libYARP_OS/src/Network.cpp: shuffle header file to 
	avoid Mac OSX problem [thanks Lorenzo Natale]

2011-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Network.cpp: first pass at runtime
	loading of carriers.  Still experimental.

	* src/libYARP_dev/src/Drivers.cpp: first pass at runtime
	loading of devices.  Still experimental.

2011-02-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Carrier.h: add tag
	for carriers that use a broadcast mechanism [thanks Daniel Krieg]

	* src/libYARP_OS/src/PortCoreOutputUnit.cpp: use out-of-band
	kill messages on carriers tagged as using a broadcast mechanism.
	Previously, out-of-band kills were used only for carriers 
	tagged as connectionless. [thanks Daniel Krieg]

2011-02-08  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\serial\SerialDeviceDriver.cpp